web/css/how_it_works.css
#mainWrapper{
	overflow-x:hidden; 
}
.tab-container {
	bottom: 0;
	height: 73px;
	width: 100%;
	background-color: rgba(255, 255, 255, 0.85);
	font-family: 'BrandonGrotesque-bold';
	color: #6b6b6b;
	font-size: 13px;
	z-index: 99;
	position: fixed;
}
.tab-container  ul {
  height: 73px;
  width: 90%;
  margin: 0 auto;
  max-width: 1100px;
}
.tab-container  ul li {
	display: inline-block;
	width: 24%;
	text-align: center;
}
.tab-container  ul li a{
	padding: 27px 20px;
	display: inline-block;
}
.tab-container  ul li a:hover{
	border-top: 4px solid #A9D77B;
	padding: 23px 20px;
}
.activeli{
	border-top: 4px solid #A9D77B;
	padding: 23px 20px !important;
}
.image-wrapper{
	display: block;
	position: absolute;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	background-size: cover;
	/*background-position: 50% 50%;*/
}
#you-cook .image-wrapper{
	background-image: url('../images/how_it_works/banner1.jpg');
}
#what-you-get .image-wrapper{
	background-image: url('../images/how_it_works/wyg-bg.jpg');
}
#we-source .image-wrapper{
	background-image: url('../images/how_it_works/banner3.jpg');
}
#our-suppliers .image-wrapper{
	background-image: url('../images/how_it_works/banner4.jpg');
}
#we-inspire .image-wrapper{
	background-image: url('../images/how_it_works/banner2.jpg');
}
#we-deliver .image-wrapper{
	background-image: url('../images/how_it_works/banner6.jpg');
}
#we-prep .image-wrapper{
	background-image: url('../images/how_it_works/banner5.jpg');
}
.contentWrapper {
  width: 90%;
  top: 30%;
  position: absolute;
  left: 50%;
  max-width: 1100px;
  transform: translate(-50%,-20%);
}
#what-you-get .contentWrapper {
	left: 50%;
}
img.image-small{
	width: 32.5%;
	height: auto;
}
.contentWrapper .h0{
	color: #6b6b6b;
	font-size: 50px;
}
.box-contentWrapper {
	border: 1px solid rgb(208, 208, 208);
	box-shadow: rgb(208, 208, 208) 0px 0px 4px;
	border-radius: 5px;
	width: 43%;
	background-color:rgba(255, 255, 255, 0.85);
	padding: 20px;
}
.box-contentWrapper h3{
	font-weight: normal;
	padding-bottom: 10px; 
}
#what-you-get .box-contentWrapper{
	width: 77%;
}
#what-you-get .h0{
	width: 77%;
	text-align: right;
}
.button-container {
	padding-top: 20px;
	padding-bottom: 10px;
	overflow: hidden;
}
.caption{
	padding-top:20px;
	color: #9b9b9b;
}
.text-input {
	background-color: rgba(255, 255, 255);
	padding: 10px 0px;
	opacity: 1;
	border-radius: 4px;
	border: 1px solid #d0d0d0;
	margin-right: 10px;
	width: 28%;
	padding-left: 10px;
}
.socialMedia{
	float: left;
	margin: 0;
	margin-right: 5px;
}
.socialMedia-links{
	display: inline-block;
	padding-right: 20px;
}
#instagram{
	margin-left: 20px;
}
#we-source-container,#you-cook-container{
	overflow-x: hidden;
	position: absolute;
	width: 100%;
	height: 100%;
}
#we-source,#you-cook{
	left: 0%;
	position: absolute;
	width: 100%;
	height: 100%;
}
#our-suppliers,#what-you-get{
	left: 100%;
	position: absolute;
	width: 100%;
	height: 100%;
}
#our-suppliers .contentWrapper{
	width: 80%;
}
#we-source .h0,#our-suppliers .h0,
#what-you-get .h0,#we-deliver .h0,
#we-inspire .h0{
	color: #fff;
}
#our-suppliers .contentWrapper .box-contentWrapper{
	width: 100%;
}
.left-arrow{
	background-image: url(../images/Arrow.png);
	-ms-transform: rotate(180deg); 
    -webkit-transform: rotate(180deg);
    transform: rotate(180deg);
	position: absolute;
	top: 50%;
	left: 20px;
	height: 60px;
	width: 37px;
	cursor: pointer;
	margin-top: -30px;
}
.right-arrow{
	background-image: url(../images/Arrow.png);
	position: absolute;
	top: 50%;
	right: 20px;
	height: 60px;
	width: 37px;
	cursor: pointer;
	margin-top: -30px;
}
.sub-tab-container{
	height: 60px;
	width: 100%;
	font-size: 12px;
	font-family: 'BrandonGrotesque-Regular';
	border-bottom: 1px solid #d0d0d0;
	color: #9b9b9b;
}
.sub-tab-container  ul {
 	width: 97%;
 	margin: 0 auto;
}
.sub-tab-container  ul li {
	display: inline-block;
	text-align: center;
}
.sub-tab-container  ul li a{
	padding: 21px 20px;
	display: inline-block;
}
.sub-tab-container  ul li a:hover{
	border-bottom:  4px solid #A9D77B;
	padding: 17px 20px;
}
.sub-contentWrapper {
  width: 50%;
  padding: 20px 0 0 20px;
}

.sub-imageWrapper {
	background-image: url(../images/how_it_works/suppliers.png);
}
#our-suppliers .box-contentWrapper{
	padding: 0;
	min-height: 340px;
}
.subactiveli{
	color: #6b6b6b;
	font-family: 'BrandonGrotesque-bold';
	border-bottom:  4px solid #A9D77B;
	padding: 17px 20px !important;
}
.sub-imageWrapper {
	background-image: url(../images/how_it_works/suppliers.png);
	position: absolute;
	top: 80px;
	width: 40%;
	height: 240px;
	background-size: cover;
	background-position: 50% 50%;
	right: 20px;
	border-radius: 4px;
}
.our-suppliers-tab{
	position: relative;
}
.sub-contentWrapper .caption{
	padding-top: 0;
	color: #c8c8c8;
}
.sub-contentWrapper img{
	padding-right: 10px;
}
#roamimg-acres,
#blue-ribbon-fish,
#plantation,
#common-thread-farm{
	display: none;
}
.group-image{
	padding-top: 20px;
}
.ui-tabs-anchor:after ,.sub-tab-container a:after {
    display: none;
    content: "\25CF";
}
.left-arrow-mobile , .right-arrow-mobile,
.logo-mobile-container h3,  .box-contentWrapper hr,
.backNav-mobile,.tab-header-drop-down,
.tab-header-drop-down #plantation,
.tab-header-drop-down #common-thread-farm,#what-you-get,
#our-suppliers,#btn-what-you-get,#btn-our-suppliers,#we-inspire,.right-arrow{
	display: none;
}
#zip-code-error{
	background: none;
}
.forminput-wrapper{
	position: relative;
}
input#check-delivery-area{
	margin-bottom: 0px;
}
img#cancel,img#close {
  float: right;
  padding: 14px 17px 0px 0px;
  cursor: pointer;
}
.delivery-area-check-popup{
	display: none;
}
.delivery-area-check-popup .popup-zip-fail{
	height: auto;
	position: fixed;
	width: 400px;
	background-color: #fff;
	top: 40%;
	left: 50%;
	z-index: 999999;
	border-radius: 4px;
	-ms-transform: translate(-50%,-40%);
	-moz-transform: translate(-50%,-40%);
	-webkit-transform: translate(-50%,-40%);
	transform: translate(-50%,-40%);
}
.delivery-area-check-popup .popup-zip-fail .button{
	position: initial;
}
.delivery-area-check-popup .username-wrapper {
  padding-bottom: 20px;
  width: 100%;
  float: left;
}
label#username-error {
  bottom: 137px;
  left: 5px;
  width: 60%;
}
@media (min-width: 768px)and (max-width: 1024px) {
	.contentWrapper .h0{
		font-size: 40px;
	}
	.contentWrapper {
		left: 50%;
  		margin-left: -30%;
  		width: 60%;
	}
	.box-contentWrapper,.tab-header-drop-down ul,
	.tab-header-drop-down ul li,.tab-header-drop-down ul li a{
		width: 100% !important;
	}
	.tab-header-drop-down ul li a:first-child{
		border-bottom: 2px solid #A9D77B;
	}
	img.image-small {
  		width: 32.6%;
	}
	#our-suppliers .contentWrapper{
		left: 40%;
	}
	.sub-tab-container li:nth-child(5),.sub-tab-container li:nth-child(4){
		display: none;
	}
	#our-suppliers span.icon-menu{
		float: right;
		margin: 14px 20px 0 25px;
	}
	.tablet-dropdown-btn{		
		display: block;
		float: right;
		background-position: 3px 3px;
		background-size: 32px 20px;
		background-repeat: no-repeat;
		margin: 17px 10px 0px 0px;
		background-image: url(../images/hamburger-menu.png);
		cursor: pointer;
		height: 30px;
		width: 35px;
	}
	.tab-header-drop-down {
		width: 200px;
		background-color: rgb(255, 255, 255);
		box-shadow: rgb(208, 208, 208) 0px 0px 4px;
		position: absolute;
		right: 0px;
		top: 60px;
		text-align: center;
	}
	.tab-header-drop-down li a:hover{
		padding: 20px 20px !important;
		background-color: #d0d0d0;
	}
	.tab-header-drop-down .subactiveli{
		padding: 20px 20px !important;
		background-color: #d0d0d0;
	}

}


@media (min-width: 320px)and (max-width: 767px) {
	a.ui-tabs-anchor:visited,
    a.ui-tabs-anchor:hover,a.ui-tabs-anchor:focus{
        color: #6b6b6b;
    }
    .ui-tabs-anchor:after,.sub-tab-container a:after {
        display: block;
        color: #9B9B9B;
        font-size: 12px;
        padding: 0 5px; 
    }
    .ui-tabs-anchor,.sub-tab-container a{
        font-size: 0 !important;
    }
    .ui-state-active a:after{
        color:black;
    }
    .tab-container ul{
    	text-align: center;
    }
    .tab-container ul li{
    	width: initial;
    }
    .tab-container ul li a{
    	padding: 27px 6px !important;
    }
    .tab-container  ul li a:hover{
		border-top:none;
		padding: 27px 6px !important;
	}
	.tab-container  ul li a:active{
	 	border-top: none !important;
	 }
	.image-wrapper{
        position: relative;
        height: 250px;
        margin-top: 60px;
    }
    .contentWrapper {
		width: 100%;
		top: 0%; 
		position: relative;
		left: 0%; 
		margin-top: 55px !important;
	}
	.box-contentWrapper{
		border:none;
		box-shadow: none;
		width: 100%;
		padding-top: 0px;
	}
	.contentWrapper{
		width: 100%;
		margin-top: 0px;
	}
	.button-container{
		text-align: center;
	}
	.contentWrapper .h0{
		padding-left: 20px;
		font-size: 35px;
	}
	.tab-container{

		position: absolute;
		z-index: 999;
		top: 310px;
	}
	.left-arrow-mobile {
        position: absolute;
        top: 50%;
        margin-top: -6px;
        left: 10%;
        height: 16px;
        display: block;
    }
    .right-arrow-mobile{
        position: absolute;
        top: 50%;
        margin-top: -6px;
        -ms-transform: rotate(180deg); /* IE 9 */
        -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
        transform: rotate(180deg);
        right: 10%;
        height: 16px;
        display: block;
    }
    .right-arrow,.sub-imageWrapper,.left-arrow{
    	display: none;
    }
    .activeli,.subactiveli{
    	border-top: none;
    	padding: 0px;
    	border-bottom: none;
    }
    .logo-mobile-container h3{
		text-align: center;
		margin-top: 24px;
		color: #6b6b6b;
		display: block;
    }
    .box-contentWrapper hr{
		height: 1px;
		border: 0;
		background-color: #A9D77B;
		width: 17%;
		display: block;
    }
    #we-source-container,#you-cook-container{
    	overflow: visible;
    }
    .h0{
    	color: #6b6b6b !important;
    }
    #we-inspire .socialMedia{
    	background-image: url(../images/social_icon_sprite.png);
    	float: none;
    }
	#we-inspire #pinterest {
		background-position: -60px 0;
		width: 22px;
		height: 20px;
	}
	#we-inspire #instagram {
		background-position: -40px 0;
		width:22px;
		height:20px;
	}
	#we-inspire .btn{
		display: none;
	}
	.socialMedia-links{
		width: 100%;
		float:left;
	}
	#what-you-get,#our-suppliers,.group-image{
		display: none;
	}
	#what-you-get .contentWrapper{
		left: 0%;
	}
	.backNav-mobile{
		margin-top: 26px;
		padding-left: 20px;
		float: left;
	}
	
	.backNav-mobile span:first-child{
		float: left;
		margin-top: 1px;
	}
	
	.backNav-mobile span:nth-child(2){
		font-family: 'BrandonGrotesque-bold';
		color: #6b6b6b;
		padding-left: 20px;
	}
	#our-suppliers .contentWrapper,.sub-contentWrapper {
		width: 100%;
	}
	#our-suppliers .image-wrapper{
		background-image: url(../images/how_it_works/suppliers.png);
		border-radius:none; 
	}
	.ui-tabs-anchor:after {
        display: block;
        color: #9B9B9B;
        font-size: 12px;
        padding: 0 5px; 
    }
    .ui-tabs-anchor {
        font-size: 0 !important;
    }
    .ui-state-active a:after{
        color:black;
    }
    .sub-tab-container{
		position: absolute;
		top: -55px;
		border-bottom: none;
		text-align: center;
		z-index: 9999;
		background-color: #fff;
    }
    #our-suppliers .h0{
		width: 100%;
		text-align: center;
		float: left;
		padding:0;
    }
    .sub-tab-container ul li a{
    	padding:21px 6px !important;
    }
    .sub-tab-container ul li a:hover{
    	padding:21px 6px;
    	border-bottom: 0px;
    	color: #000;
    }
    .subactiveli:after{
    	color: #000 !important;
    }
    #what-you-get .sub-tab-container{
    	top: 310px;
    }
    .prev-sub-tab,#what-you-get,
	#our-suppliers,#btn-what-you-get,#btn-our-suppliers,
	#we-inspire,.right-arrow{
    	display: none;
    }

}
@media (max-width: 400px) {
	.logo-mobile-container{
		width: 195px;
	}
	.contentWrapper .h0{
		font-size: 32px;
	}
}

